--- a/lib/Transforms/CpuRename/CMakeLists.txt
+++ b/lib/Transforms/CpuRename/CMakeLists.txt
@@ -1,3 +1,8 @@
+if(WIN32 OR CYGWIN)
+  set(LLVM_LINK_COMPONENTS Core Support)
+endif()
+
+
 add_llvm_loadable_module( LLVMCpuRename
     CpuRename.cpp
   )
