--- a/lib/Transforms/HC/WrapperGen/CMakeLists.txt
+++ b/lib/Transforms/HC/WrapperGen/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(WIN32 OR CYGWIN)
+  set(LLVM_LINK_COMPONENTS Core Support)
+endif()
+
 add_llvm_loadable_module(LLVMWrapperGen
   WrapperGen.cpp
   )
